modified index file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
     </div>
 
     <div class="containerTwo" id="completed">
-
+        <div>
+            <span>
+                <p>
+                    Completed Tasks:
+                </p>
+            </span>
+        </div>
     </div>
 
     <script src="./app.js"></script>
